# matilda-java-plugin

./: main.py  pyproject.toml
agent-plugin/: gradle.properties
agent-plugin/plugin/: build.gradle.kts
agent-plugin/plugin/src/main/java/org/matilda/java/: FunctionService.kt  JavaPlugin.kt  JavaPluginComponent.java  JavaPluginComponent.kt  MathService.kt
agent-plugin/plugin/src/main/java/org/matilda/java/services/reflection/: ObjectIdGenerator.java  ObjectIdGenerator.kt  ObjectRepository.kt  ProxyHandlerService.kt  ProxyServiceInvocationHandler.kt  ReflectionService.kt  ReflectionUtils.kt
agent-plugin/plugin/src/main/proto/java/protos/: exercise.proto  reflection.proto
java/: java_class.py  java_constructor.py  java_executable.py  java_field.py  java_method.py  java_object.py  java_plugin.py  java_primitive_type.py  java_type.py  java_value.py  proxy_handler.py  proxy_handler_service_impl.py
