[build-system]
requires = ["setuptools"]

[project]
name = 'matilda-java-plugin'
version = '0.3.0'
authors = [{name = 'Nadav Gur', email = 'nadavgu@gmail.com'}]
dependencies = [
    'matilda'
]

[project.entry-points.'matilda.plugins']
java = 'java.java_plugin'

[tool.setuptools.package-data]
'java.resources' = ["plugin.jar"]